checkboxes with shift

--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -99,6 +99,28 @@
   </div>
 
 <script>
+  const checkboxes = document.querySelectorAll('.inbox input[type="checkbox"]');
+  let lastChecked;
+
+  function handleCheck(e) {
+    //used to define what is in between later
+    let inBetween = false;
+    if(e.shiftKey && this.checked) {
+      checkboxes.forEach(checkbox => {
+        console.log(checkbox);
+        if(checkbox === this || checkbox === firstCheck) {
+          inBetween = !inBetween;
+          console.log('Starting to check them inbetween!');
+        }
+        if(inBetween) {
+          checkbox.checked = true;
+        }
+      })
+    }
+    firstCheck = this;
+  }
+
+  checkboxes.forEach(checkbox => checkbox.addEventListener('click', handleCheck));
 </script>
 </body>
 </html>
