--- a/13 - Slide in on Scroll/index-START.html
+++ b/13 - Slide in on Scroll/index-START.html
@@ -57,6 +57,26 @@
         if (callNow) func.apply(context, args);
       };
     }
+
+    const images = document.querySelectorAll('.slide-in');
+    function checkSlide(e) {
+      images.forEach(image => {
+        //halfway through image
+        const slideInAt = (window.scrollY + window.innerHeight) - image.height/2;
+        //bottom of image
+        const imageBottom = image.offsetTop + image.height;
+        const isHalfShown = slideInAt > image.offsetTop;
+        const inView = window.scrollY < imageBottom;
+        console.log({imageBottom : imageBottom, isHalfShown : isHalfShown, inView : inView});
+        if(isHalfShown && inView) {
+          image.classList.add('active');
+        }
+        else{
+          image.classList.remove('active');
+        }
+      })
+    }
+    window.addEventListener('scroll', debounce(checkSlide));
   </script>
 
   <style>
